# pfmt-bench-fin-ja

./: .env.tmp  .gitignore  LICENSE  README.md  gen_api_answer.py  gen_judgment.py  gen_model_answers.py  make_leaderboard.py  make_rader_figure.py  pyproject.toml  show_result.py
data/: judge_prompts.jsonl
data/pfmt_bench_fin_ja/: .gitignore  question.jsonl
data/pfmt_bench_fin_ja/model_answer/: .gitignore  claude-2.1.jsonl  claude-3-5-sonnet-20240620.jsonl  claude-3-haiku-20240307.jsonl  claude-3-opus-20240229.jsonl  claude-3-sonnet-20240229.jsonl  gpt-35-turbo.jsonl  gpt-4.jsonl  gpt-4o.jsonl  meta-llama_Meta-Llama-3-70B-Instruct.jsonl  meta-llama_Meta-Llama-3-70B.jsonl  nvidia_nemotron-4-340b-instruct.jsonl  plamo-1.0-prime-beta.jsonl
data/pfmt_bench_fin_ja/model_judgment/gpt-4o-mini_single/: .gitignore  claude-2.1.jsonl  claude-3-5-sonnet-20240620.jsonl  claude-3-haiku-20240307.jsonl  claude-3-opus-20240229.jsonl  claude-3-sonnet-20240229.jsonl  gpt-35-turbo.jsonl  gpt-4.jsonl  nvidia_nemotron-4-340b-instruct.jsonl  plamo-1.0-prime-beta.jsonl
data/pfmt_bench_fin_ja/model_judgment/gpt-4o_single/: .gitignore  claude-2.1.jsonl  claude-3-5-sonnet-20240620.jsonl  claude-3-haiku-20240307.jsonl  claude-3-opus-20240229.jsonl  claude-3-sonnet-20240229.jsonl  gpt-35-turbo.jsonl  gpt-4.jsonl  gpt-4o.jsonl  nvidia_nemotron-4-340b-instruct.jsonl  plamo-1.0-prime-beta.jsonl
data/pfmt_bench_fin_ja/reference_answer/: gpt-4o+human.jsonl
utils/: api.py  common.py  dedup.py
